# idle-M1

./: README.md  cnn.ipynb  cnn_and_misc.ipynb  mlflow.db  pyproject.toml  tp1-gradientdescent.ipynb  tp2-train.ipynb  tp3-cnn.ipynb  tp4-rnn.ipynb
.ipynb_checkpoints/: tp-gradientdescent-checkpoint.ipynb
1/0662b679debb4bea8ee7fb4180f0e203/checkpoints/: epoch=4-step=570.ckpt
1/0f446ce835a9473dbf0396b4525d0aa6/checkpoints/: epoch=4-step=570.ckpt
1/27bb95af3cec4b8f890a05cd9828689a/checkpoints/: epoch=4-step=570.ckpt
1/5fd28181fb464ecd8d6074917507edb2/checkpoints/: epoch=4-step=570.ckpt
1/bbd82b99cd964f97bebe3f11402f99e0/checkpoints/: epoch=4-step=570.ckpt
lightning_logs/version_0/: metrics.csv
lightning_logs/version_0/checkpoints/: epoch=9-step=1140.ckpt
mlruns/0/models/m-071a9a7d34274a96a62977f426833854/artifacts/: MLmodel
mlruns/0/models/m-071a9a7d34274a96a62977f426833854/artifacts/data/: model.pth
mlruns/0/models/m-771443367dac4482b4d9c00e1a68a417/artifacts/: MLmodel  requirements.txt
mlruns/0/models/m-771443367dac4482b4d9c00e1a68a417/artifacts/data/: model.pth
mlruns/0/models/m-83ebfb85792e416abf6e6b06b97c9e5e/artifacts/: MLmodel  conda.yaml  python_env.yaml
mlruns/0/models/m-83ebfb85792e416abf6e6b06b97c9e5e/artifacts/data/: model.pth
mlruns/0/models/m-c4d4e913894845039f25350e92d1affe/artifacts/: MLmodel
mlruns/0/models/m-c4d4e913894845039f25350e92d1affe/artifacts/data/: model.pth
mlruns/0/models/m-e3c2e9d98bca414cafa402a281373a1d/artifacts/: MLmodel
mlruns/0/models/m-e3c2e9d98bca414cafa402a281373a1d/artifacts/data/: model.pth
